# src/rag/dto/reindex.dto.ts
@@ -1,0 +1,12 @@
+import { IsArray, IsBoolean, IsOptional, IsUUID } from 'class-validator';
+
+export class ReindexDto {
+  @IsOptional()
+  @IsBoolean()
+  onlyPublished?: boolean = true;
+
+  @IsOptional()
+  @IsArray()
+  @IsUUID('4', { each: true })
+  articleIds?: string[];
+}
